--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,36 @@ li {
 .container {
   width: 100%;
   height: 100vh;
+  position: relative;
 }
+.container.dark {
+  background-color: #222;
+}
+/* 다크모드 */
+.toggle-btn {
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 99;
+  color: #222;
+  user-select:none
+}
+.toggle-btn.dark {
+  color: white;
+}
+.toggle-btn p {
+  margin-right: 10px;
+}
+.toggle-btn-icon {
+  font-size: 30px;
+}
+/* ----------- */
 .wrapper {
   width: 100%;
   height: 100%;
@@ -23,7 +52,7 @@ li {
 .sidebar {
   width: 60px;
   height: 100%;
-  background-color: #333;
+  background-color: #222;
 }
 .navi {
   display: flex;
@@ -39,7 +68,6 @@ li {
   width: 100%;
   height: 100%;
   position: relative;
-  background-color: yellow;
 }
 .box {
   margin: 200px auto 0;
@@ -48,6 +76,7 @@ li {
   background-color: aqua;
   display: flex;
 }
+/* 날씨api */
 .box-left {
   background-color: yellowgreen;
   width: 50%;
@@ -63,27 +92,43 @@ li {
   border: 0;
   outline: 0;
   border-radius: 5px;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
+}
+.box-select.dark {
+  background-color: #222;
+  color: white;
 }
 .weather {
   display: flex;
   align-items: center;
   flex-direction: column;
+  color: #222;
+}
+.weather.dark {
+  color: white;
 }
 .weather-icon {
-  color: #222;
   font-size: 100px;
   margin-bottom: 30px;
 }
 .weather-now {
-  color: #222;
   font-size: 24px;
   margin-bottom: 10px;
 }
-
+/* ai답변 */
 .box-right {
   background-color: bisque;
   width: 50%;
   height: 100%;
   padding: 50px;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #222;
 }
+.box-right.dark {
+  color: white;
+}
+
+
